# slop-minimization

./: README.md  conftest.py  pyproject.toml  report.md
configs/: default.yaml  reward.yaml
scripts/: eval.py  (+4 more)
slop-minimization/: .gitignore  README.md  conftest.py  pyproject.toml
slop-minimization/configs/: classifier_encoder.yaml  default.yaml  prompt_opt.yaml
slop-minimization/data/: slop_pairs.jsonl  test.jsonl  train.jsonl  val.jsonl
slop-minimization/docs/: AUDIT_FOUR_SYSTEMS.md  CRITICAL_MODELS_AND_SAVING_WEIGHTS.md
slop-minimization/notebooks/: slop_pipeline_colab.ipynb
slop-minimization/scripts/: audit_semantic_mutations.py  build_classifier_dataset.py  build_data.py  compare_generators.py  compare_rendering_modes.py  compare_reward_checkpoints.py  compare_structure_styles.py  eval.py  eval_prompts.py  eval_reward_model.py  optimize_prompts.py  review_latest_run.py  score_reward.py  train_slop_generator.py  train_token_classifier.py  validate_dataset.py
slop-minimization/src/slop/: __init__.py
slop-minimization/src/slop_minimization/: config.py  scoring.py
slop-minimization/src/slop_minimization/data/: __init__.py  token_labels.py
slop-minimization/src/slop_minimization/models/: __init__.py  classifier_factory.py  slop_generator.py  token_classifier.py
slop-minimization/src/slop_minimization/prompt_opt/: __init__.py  evolve.py  generator.py  mutations.py  templates.py
slop-minimization/src/slop_minimization/scoring/: __init__.py  aggregation.py  diagnostics.py  reward.py
slop-minimization/tests/: test_scoring.py  test_tokenizer.py
(+44 files in other folders)
